demo/kubernetes/demo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: dockerjain/springiodemo
        ports:
        - containerPort: 8090
