demo/kubernetes/demo-svc-lb.yaml
Load balancer service:
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo-svc
  namespace: default
spec:
  ports:
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: demo
  sessionAffinity: None
  type: LoadBalancer
