demo/kubernetes/demo-svc-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - host: www.example.com
    http:
      paths: 
      - backend:
          serviceName: demo-svc
          servicePort: 8090
        path: /blue
